<resources>
    <string name="app_name">Among us</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido!!"</string>
    <string name="invalid_username">Introduce un nombre válido</string>
    <string name="invalid_password">La contraseña debe tener más de 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="rememberPass"><u>¿Has olvidado tu contraseña?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="no_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate">REGÍSTRATE</string>
    <string name="contrasenna">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="bienvenida">¡Hola de nuevo!</string>
    <string name="confirmar_contrasenna">Confirmar Contraseña</string>
    <string name="email">Email</string>
    <string name="birthday">Fecha de Nacimiento</string>
    <string name="conditions">He leído y acepto las <a href="https://es.wikipedia.org/wiki/Términos">Condiciones del Servicio</a> y la <a href="https://es.wikipedia.org/wiki/Términos">Política de Privacidad</a>.</string>
    <string name="si_cuenta">¿Ya tienes una cuenta?</string>
    <string name="enterEmail">Por favor introduce tu correo electrónico y te enviaremos las instrucciones para restablecer tu contraseña</string>
    <string name="send">ENVIAR</string>
    <string name="forgotpass">¿Has olvidado tu usuario o contraseña?</string>
    <string name="registro">Registro</string>
    <string name="main_bg">Main background</string>
</resources>