<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RememberPassFragment"
    android:background="@color/colorPrimaryDark2">

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:src="@color/bg_gw"-->
<!--        android:scaleType="centerCrop" />-->

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degradado2"
        />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dp25"
            android:paddingTop="@dimen/dp35"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/forgotpass"
                android:textAlignment="center"
                android:textColor="@color/loading"
                android:textSize="@dimen/sp25" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginBottom="10dp"
                android:text="@string/enterEmail"
                android:textAlignment="center"
                android:justificationMode="inter_word"
                android:textColor="@color/loading"
                android:textSize="@dimen/sp11" />

            <ImageView

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_rr"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/dp20"
                />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/email_black"
                app:startIconTint="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:background="@android:color/white"
                app:boxStrokeColor="@color/colorPrimary"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/email_rp"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button

                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/sendEmail"
                android:text="@string/send"
                android:textSize="25sp"
                android:layout_marginTop="@dimen/dp15"
                android:textColor="@color/loading"
                app:cornerRadius="@dimen/dp15"
                />

          <!--  <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingHorizontal="@dimen/dp20"
                android:layout_marginTop="@dimen/dp25">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/si_cuenta"
                    android:textColor="@color/loading"
                    android:layout_weight="2"
                    android:paddingTop="@dimen/dp15" />
                <Button
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_rp"
                    android:text="@string/iniciar_sesion"
                    android:textColor="@color/loading"
                    android:layout_weight="2" />
            </LinearLayout>-->
            <!--<ProgressBar
                android:id="@+id/loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:visibility="visible" />-->
        </LinearLayout>
    </ScrollView>


